<resources>
    <string name="app_name">Moosync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="queue">Queue</string>
    <string name="home">Home</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genre">Genre</string>
    <string name="explore">Explore</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="songs_header">Songs</string>
    <string name="settings">Settings</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="cover_image">Cover image</string>
    <string name="pause">Pause</string>
    <string name="repeat">Repeat</string>
    <string name="skip_back">Skip back</string>
    <string name="skip_forward">Skip Forward</string>
    <string name="zero_time">0:00</string>
</resources>