<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_queue"
            android:title="@string/queue" />

        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/songs"
            android:title="@string/all_songs" />

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/playlists"
            android:title="@string/playlists" />

        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/albums"
            android:title="@string/albums" />

        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/artists"
            android:title="@string/artists" />

        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/genres"
            android:title="@string/genre" />

        <item
            android:id="@+id/nav_explore"
            android:title="@string/explore" />
    </group>
</menu>