<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore" />

        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlists"
            android:title="@string/playlists" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>