<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:progress="69" />

    <app.moosync.moosync.ui.views.ThemedLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/coverImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/cover_image"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <app.moosync.moosync.ui.views.ThemedTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem[3]" />

            <app.moosync.moosync.ui.views.ThemedTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem[4]"
                app:themeStyle="textSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shuffle"
                android:contentDescription="@string/shuffle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/play" />
        </LinearLayout>
    </app.moosync.moosync.ui.views.ThemedLinearLayout>
</LinearLayout>