<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <app.moosync.moosync.ui.views.ThemedLinearLayout
        android:id="@+id/now_playing_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:alpha="1"
        android:alpha="0"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp">

            <LinearLayout
                android:id="@+id/play_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <app.moosync.moosync.ui.views.ThemedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:text="Playing from local files" />
            </LinearLayout>

            <ImageView
                android:id="@+id/coverImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_location"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <app.moosync.moosync.ui.views.ThemedLinearLayout
                    android:id="@+id/song_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <app.moosync.moosync.ui.views.ThemedTextView
                        android:id="@+id/song_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@tools:sample/lorem[3]" />

                    <app.moosync.moosync.ui.views.ThemedTextView
                        android:id="@+id/song_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/lorem[4]" />

                </app.moosync.moosync.ui.views.ThemedLinearLayout>

                <LinearLayout
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/song_details">

                    <app.moosync.moosync.ui.views.ThemedProgressBar
                        android:id="@+id/seekbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:progress="69" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp">

                        <app.moosync.moosync.ui.views.ThemedTextView
                            android:id="@+id/current_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0:00"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <app.moosync.moosync.ui.views.ThemedTextView
                            android:id="@+id/total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0:00"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/media_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress">

                    <ImageView
                        android:id="@+id/repeat_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/repeat"
                        android:src="@drawable/ic_baseline_repeat_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/media_actions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="40dp"
                        android:layout_weight="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/shuffle_button"
                        app:layout_constraintStart_toEndOf="@+id/repeat_button"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/skip_prev"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/skip_back"
                            android:src="@drawable/ic_outline_skip_previous_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/play_pause_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/skip_next"
                            app:layout_constraintStart_toEndOf="@+id/skip_prev"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/play_button"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/media_btn_bg"
                                android:contentDescription="@string/play"
                                android:padding="16dp"
                                android:src="@drawable/ic_play"
                                app:layout_constraintStart_toStartOf="@+id/pause_button"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/pause_button"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:alpha="0"
                                android:background="@drawable/media_btn_bg"
                                android:contentDescription="@string/play"
                                android:padding="16dp"
                                android:src="@drawable/ic_pause"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <ImageView
                            android:id="@+id/skip_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="40dp"
                            android:contentDescription="@string/skip_forward"
                            android:src="@drawable/ic_outline_skip_next_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/shuffle_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/shuffle"
                        android:src="@drawable/ic_baseline_shuffle_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </app.moosync.moosync.ui.views.ThemedLinearLayout>
</layout>